src/assets/scss/plugins/_tables.scss
/* ... */
.mat-table {
  .mat-header-cell {
    font-size: 14px;
    font-weight: 600;
  }
}

.ngx-datatable.material {
  background: #fff;
  border: 1px solid #f5f5f5;
  box-shadow: none !important;

  .datatable-footer {
    .datatable-pager {
      .pager li a {
        margin: 5px;

        .datatable-icon-right,
        .datatable-icon-skip,
        .datatable-icon-left,
        .datatable-icon-prev {
          line-height: 30px;
        }
      }

      li.active a {
        background-color: #0d8df3;
        transition: 0.25s ease;
        color: #ffffff;
        box-shadow: 4px 3px 6px 0 rgba(0, 0, 0, 0.2);
      }
    }
  }
}

.ngx-table-form-select {
  margin-top: 0px;
  padding-left: 40px !important;
}

.ngx-search {
  margin: 15px auto !important;
  width: 30% !important;
  font-size: 13px !important;
}

.ngx-datatable {
  .datatable-body-cell {
    display: table !important;
  }

  .datatable-body-cell-label {
    display: table-cell !important;
    vertical-align: middle !important;
  }

  .datatable-header-cell {
    line-height: 2.4 !important;
  }
}

.materialTableHeader {
  -webkit-box-align: center;
  align-items: center;
  border-color: #dae1f3;
  background-color: #dae1f3;
  display: flex;
  flex-wrap: wrap;
  text-align: center;
  border-radius: 10px 10px 0px 0px;
  padding: 0px 5px;
  // min-width: 800px;

  .left {
    flex: 35%;
    height: 60px;
    display: table-cell;
    vertical-align: middle;
    text-align: center;
  }
  .center {
    flex: 40%;
    height: 60px;
    display: table-cell;
    vertical-align: middle;
    text-align: left;
  }

  .right {
    flex: 10%;
    height: 60px;
    display: table-cell;
    vertical-align: middle;
    text-align: center;
  }

  .tbl-export-btn {
    float: right;
    margin: 0px 15px;
    list-style: none;
    height: 100%;
    display: flex;
    align-items: center;

    li {
      display: inline-block;
      position: relative;
    }
  }

  .header-buttons-left {
    list-style: none;
    height: 100%;
    display: flex;
    align-items: center;

    .tbl-search-box {
      position: relative;
      margin-left: 10px;
    }
    .tbl-title {
      vertical-align: middle;
      margin-left: 20px;

      h2 {
        font-weight: 500;
      }
    }
    .tbl-header-btn {
      position: relative;
    }

    li {
      display: inline-block;
    }

    .searchbox {
      position: relative;
    }

    ::placeholder {
      color: rgba(0, 0, 0, 0.54);
    }

    .search-icon {
      position: absolute;
      top: 10px;
      padding-left: 10px;
      color: rgba(0, 0, 0, 0.54);
    }

    input.search-field {
      font-weight: 500;
      color: rgba(0, 0, 0, 0.54);
      border-radius: 5px;
      border: 0;
      height: 45px;
      padding: 8px 8px 8px 50px;
      width: 100%;
      background: #ffffff;

      &:hover {
        background: #fffefe;
      }

      // &:focus {
      //   outline: none;
      //   width: 380px;
      //   color: #212121;
      //   &:hover {
      //     background: #f7f7f7;
      //   }
      // }
    }
  }

  .header-buttons-right {
    text-align: right;
    list-style: none;
    height: 100%;
    margin: 0px 10px;

    .tbl-header-btn {
      position: relative;
      top: 12px;
    }

    li {
      display: inline-block;
    }

    h2 {
      margin: 0;
      font-size: 16px;
      font-weight: normal;
      color: #5b626b;
    }
  }

  h2 {
    margin: 0;
    font-size: 16px;
    font-weight: normal;
    color: #5b626b;
  }
}

.tbl-checkbox label {
  margin-bottom: 0px;
}
.column-nowrap {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.table-tab a {
  background-color: #e2e2e2 !important;
  color: #868788 !important;
  border-radius: 30px;
  &.active {
    background-color: #7274e2 !important;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.2), 0 4px 13px -11px #7197b5;
    color: #ffffff !important;
    border-radius: 30px;
  }
}
.app-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-radius: 10px;
  vertical-align: middle;
  padding: 10px;
  margin-bottom: 10px;
  background: #f9f9f9;
  img {
    margin: 0px 10px;
  }
  .set-flex {
    flex: 1;
  }
}
.merit-list {
  display: flex;
  flex-direction: row;
  align-items: center;
  border-radius: 4px;
  vertical-align: middle;
  padding: 6px;
  margin-bottom: 6px;
  background: #f1f0f5;
}
.report-list {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
  padding: 12px 12px;
  border: 1px dashed #bfc9d4;
  border-radius: 6px;
  .file-style {
    font-size: 20px;
    margin: 0px 10px;
  }
  .ms-auto {
    margin-right: 10px;
    cursor: pointer;
    i {
      padding-right: 10px;
    }
  }
}
.patient-group-list {
  display: flex;
  align-items: center;
  padding: 12px 12px;
  border-radius: 6px;
  .lbl-bedge {
    padding: 10px;
    margin: 0px 5px;
    border-radius: 50%;
    position: relative;
    display: inline-block;
    width: 38px;
    height: 38px;
    font-size: 14px;
    font-weight: 600;
    letter-spacing: 1px;
    .lbl-bedge-title {
      color: #ffffff;
      display: flex;
      align-items: center;
      justify-content: center;
      width: 100%;
      height: 100%;
    }
  }

  .group-details {
    line-height: 38px;
    padding-left: 10px;
    font-weight: 500;
  }
}
.tbl-spinner {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
}
.doc-file-type {
  .d-flex {
    margin-bottom: 15px;
    padding-bottom: 15px;
    border-bottom: 1px solid #d5dadb;
  }
  .img-icon {
    width: 46px;
    height: 46px;
    line-height: 46px;
    border-radius: 10%;
    font-size: 23px;
    text-align: center;
    margin: 0px 15px;
  }
  .set-flex {
    display: block;
    color: #000;
    height: 30px;
  }
  .ms-auto {
    margin-right: 10px;
    cursor: pointer;
  }
}
.primary-rgba {
  background-color: rgba(110, 129, 220, 0.1);
}
.success-rgba {
  background-color: rgba(95, 194, 126, 0.1);
}
/* ... */

